to please recent gbp -- we are building from the branch, not tags

--- a/debian/gbp.conf
+++ b/debian/gbp.conf
@@ -9,6 +9,7 @@ upstream-branch = dfsg
 debian-branch = debian
 # the default tag formats used:
 upstream-tag = %(version)s
+upstream-tree = branch
 debian-tag = debian/%(version)s
 
 # Options only affecting git-buildpackage
