pacify lintian and add ${python:Depends} for python-scikits-learn
not strictly necessary since all those pulled in through dependency on python-sklearn

--- a/debian/control
+++ b/debian/control
@@ -56,7 +56,7 @@ Description: low-level implementations and bindings for scikit-learn
 
 
 Package: python-scikits-learn
-Depends: python-sklearn, ${misc:Depends}
+Depends: python-sklearn, ${misc:Depends}, ${python:Depends}
 Architecture: all
 Section: oldlibs
 Description: transitional compatibility package for scikits.learn -> sklearn migration
