--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,9 @@ matrix:
        if: type = cron OR commit_message =~ /\[scipy-dev\]/
 
 install: source build_tools/travis/install.sh
-script: bash build_tools/travis/test_script.sh
+script: 
+  - bash build_tools/travis/test_script.sh
+  - bash build_tools/travis/test_docs.sh
 after_success: source build_tools/travis/after_success.sh
 notifications:
   webhooks:
