TST: Moves soft pytest dependency test

--- a/.travis.yml
+++ b/.travis.yml
@@ -65,6 +65,7 @@ install: source build_tools/travis/install.sh
 script: 
   - bash build_tools/travis/test_script.sh
   - bash build_tools/travis/test_docs.sh
+  - bash build_tools/travis/test_pytest_soft_dependency.sh
 after_success: source build_tools/travis/after_success.sh
 notifications:
   webhooks:
