--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,27 @@ env:
 
 matrix:
   include:
+    # This environment tests that scikit-learn can be built against
+    # versions of numpy, scipy with ATLAS that comes with Ubuntu Xenial 16.04
+    # i.e. numpy 1.11 and scipy 0.17
+    - env: DISTRIB="ubuntu" PYTHON_VERSION="3.5" CYTHON_VERSION="0.23.5"
+           NUMPY_VERSION="1.11.0" SCIPY_VERSION="0.17.0" 
+           PILLOW_VERSION="4.0.0" COVERAGE=true
+           SKLEARN_SITE_JOBLIB=1 JOBLIB_VERSION="0.11"
+      if: type != cron
+      addons:
+        apt:
+          packages:
+            # these only required by the DISTRIB="ubuntu" builds:
+            - python3-scipy
+            - libatlas3-base
+            - libatlas-dev
+    # Python 3.5 build
+    - env: DISTRIB="conda" PYTHON_VERSION="3.5" INSTALL_MKL="false"
+           NUMPY_VERSION="1.11.0" SCIPY_VERSION="0.17.0" CYTHON_VERSION="0.25.2"
+           PILLOW_VERSION="4.0.0" COVERAGE=true
+           SKLEARN_SITE_JOBLIB=1 JOBLIB_VERSION="0.11"
+      if: type != cron
     # This environment tests the latest available dependencies.
     # It runs tests requiring pandas and PyAMG.
     # It also runs with the site joblib instead of the vendored copy of joblib.
@@ -33,7 +54,7 @@ matrix:
     # This environment tests scikit-learn against numpy and scipy master
     # installed from their CI wheels in a virtualenv with the Python
     # interpreter provided by travis.
-    -  python: 3.6
+    -  python: 3.7
        env: DISTRIB="scipy-dev" CHECK_WARNINGS="true"
        if: type = cron OR commit_message =~ /\[scipy-dev\]/
 
