--- a/.travis.yml
+++ b/.travis.yml
@@ -36,6 +36,11 @@ matrix:
             - libatlas3-base
             - libatlas-base-dev
             - libatlas-dev
+    # Python 3.5 build without SITE_JOBLIB
+    - env: DISTRIB="conda" PYTHON_VERSION="3.5" INSTALL_MKL="false"
+           NUMPY_VERSION="1.11.0" SCIPY_VERSION="0.17.0" CYTHON_VERSION="0.25.2"
+           PILLOW_VERSION="4.0.0" COVERAGE=true
+      if: type != cron
     # Python 3.5 build
     - env: DISTRIB="conda" PYTHON_VERSION="3.5" INSTALL_MKL="false"
            NUMPY_VERSION="1.11.0" SCIPY_VERSION="0.17.0" CYTHON_VERSION="0.25.2"
