--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,40 @@
 version: 2
 
 jobs:
+  python3-min-dependency-versions:
+    docker:
+      - image: circleci/python:3.6.1
+    environment:
+      - MINICONDA_PATH: ~/miniconda
+      - CONDA_ENV_NAME: testenv
+      - PYTHON_VERSION: 3.5
+      - NUMPY_VERSION: 1.11.0
+      - SCIPY_VERSION: 0.17.0
+      - PANDAS_VERSION: 0.17.1
+      - MATPLOTLIB_VERSION: 1.5.1
+      - SCIKIT_IMAGE_VERSION: 0.10.1
+    steps:
+      - checkout
+      - run: ./build_tools/circle/checkout_merge_commit.sh
+      - restore_cache:
+          key: v1-datasets-{{ .Branch }}
+      - run: ./build_tools/circle/build_doc.sh
+      - save_cache:
+          key: v1-datasets-{{ .Branch }}
+          paths:
+            - ~/scikit_learn_data
+      - store_artifacts:
+          path: doc/_build/html/stable
+          destination: doc
+      - store_artifacts:
+          path: ~/log.txt
+          destination: log.txt
+      # Persists generated documentation so that it can be attached and deployed
+      # in the 'deploy' step.
+      - persist_to_workspace:
+          root: doc/_build/html
+          paths: .
+
   python3:
     docker:
       - image: circleci/python:3.6.1
