--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,13 @@ matrix:
            PILLOW_VERSION="4.0.0" COVERAGE=true
            SKLEARN_SITE_JOBLIB=1 JOBLIB_VERSION="0.11"
       if: type != cron
+    # equivalent on Mac
+    - env: DISTRIB="conda" PYTHON_VERSION="3.5" INSTALL_MKL="false"
+           NUMPY_VERSION="1.11.0" SCIPY_VERSION="0.17.0" CYTHON_VERSION="0.25.2"
+           PILLOW_VERSION="4.0.0" COVERAGE=true
+           SKLEARN_SITE_JOBLIB=1 JOBLIB_VERSION="0.11"
+      if: type != cron
+      os: osx
     # This environment tests the latest available dependencies.
     # It runs tests requiring pandas and PyAMG.
     # It also runs with the site joblib instead of the vendored copy of joblib.
