--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ matrix:
            NUMPY_VERSION="1.11.0" SCIPY_VERSION="0.17.0" CYTHON_VERSION="0.25.2"
            PILLOW_VERSION="4.0.0" COVERAGE=true
            SKLEARN_SITE_JOBLIB=1 JOBLIB_VERSION="0.11"
-      python: 3.5
+      language: generic
       if: type != cron
       os: osx
     # This environment tests the latest available dependencies.
