--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ matrix:
            PILLOW_VERSION="4.0.0" COVERAGE=true
            SKLEARN_SITE_JOBLIB=1 JOBLIB_VERSION="0.11"
       if: type != cron
-    # latest depnedencies on Mac
+    # latest dependencies on Mac
     - env: DISTRIB="conda" PYTHON_VERSION="3.5" INSTALL_MKL="false"
            NUMPY_VERSION="*" SCIPY_VERSION="*" CYTHON_VERSION="*"
            PILLOW_VERSION="*" COVERAGE=true
