--- a/.travis.yml
+++ b/.travis.yml
@@ -36,25 +36,12 @@ matrix:
             - libatlas3-base
             - libatlas-base-dev
             - libatlas-dev
-    # Python 3.5 build without SITE_JOBLIB
+    # Python 3.5 build with OpenBLAS and without SITE_JOBLIB
     - env: DISTRIB="conda" PYTHON_VERSION="3.5" INSTALL_MKL="false"
            NUMPY_VERSION="1.11.0" SCIPY_VERSION="0.17.0" CYTHON_VERSION="0.25.2"
            PILLOW_VERSION="4.0.0" COVERAGE=true
       if: type != cron
-    # Python 3.5 build
-    - env: DISTRIB="conda" PYTHON_VERSION="3.5" INSTALL_MKL="false"
-           NUMPY_VERSION="1.11.0" SCIPY_VERSION="0.17.0" CYTHON_VERSION="0.25.2"
-           PILLOW_VERSION="4.0.0" COVERAGE=true
-           SKLEARN_SITE_JOBLIB=1 JOBLIB_VERSION="0.11"
-      if: type != cron
-    # latest dependencies on Mac
-    - env: DISTRIB="conda" PYTHON_VERSION="3.5" INSTALL_MKL="false"
-           NUMPY_VERSION="*" SCIPY_VERSION="*" CYTHON_VERSION="*"
-           PILLOW_VERSION="*" JOBLIB_VERSION="*" COVERAGE=true
-      language: generic
-      if: type != cron
-      os: osx
-    # This environment tests the latest available dependencies.
+    # This environment tests the latest available dependencies and MKL.
     # It runs tests requiring pandas and PyAMG.
     # It also runs with the site joblib instead of the vendored copy of joblib.
     - env: DISTRIB="conda" PYTHON_VERSION="*" INSTALL_MKL="true"
@@ -64,6 +51,13 @@ matrix:
            CHECK_PYTEST_SOFT_DEPENDENCY="true" TEST_DOCSTRINGS="true"
            SKLEARN_SITE_JOBLIB=1 CHECK_WARNINGS="true"
       if: type != cron
+    # Latest dependencies on Mac with MKL
+    - env: DISTRIB="conda" PYTHON_VERSION="3.7" INSTALL_MKL="true"
+           NUMPY_VERSION="*" SCIPY_VERSION="*" CYTHON_VERSION="*"
+           PILLOW_VERSION="*" JOBLIB_VERSION="*" COVERAGE=true
+      language: generic
+      if: type != cron
+      os: osx
     # This environment tests scikit-learn against numpy and scipy master
     # installed from their CI wheels in a virtualenv with the Python
     # interpreter provided by travis.
