--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,5 @@
 jobs:
-- template: ci/azure/posix.yml
+- template: build_tools/azure/posix.yml
   parameters:
     name: macOS
     vmImage: xcode9-macos10.13
