add cython plugin to coveragerc

--- a/.coveragerc
+++ b/.coveragerc
@@ -2,6 +2,7 @@
 branch = True
 source = sklearn
 include = */sklearn/*
+plugins = Cython.Coverage
 omit =
     */sklearn/externals/*
     */benchmarks/*
