Enable PyPy CI for branches containing the key word "pypy"

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,7 @@ workflows:
             branches:
               only:
                 - 0.20.X
+                - /.*pypy.*/
       - deploy:
           requires:
             - doc
