--- a/lgtm.yml
+++ b/lgtm.yml
@@ -2,3 +2,6 @@ extraction:
   cpp:
     before_index:
       - export PYTHON=python3
+    index:
+      - pip3 install numpy scipy Cython
+      - make inplace
