--- a/lgtm.yml
+++ b/lgtm.yml
@@ -1,9 +1,8 @@
 extraction:
   cpp:
-    configure:
-      - pip3 install numpy scipy Cython
     before_index:
       - export PYTHON=python3
+      - pip3 install numpy scipy Cython
     index:
       build_command:
-        - make inplace
+        - python3 setup.py build_ext -i
