--- a/lgtm.yml
+++ b/lgtm.yml
@@ -1,10 +1,8 @@
 extraction:
   cpp:
-    prepare:
-      packages:
-         - "python3-numpy"
-         - "python3-scipy"
-         - "cython3"
+    before_index:
+      - export PYTHON=python3
+      - pip3 install numpy scipy Cython
     index:
       build_command:
         - python3 setup.py build_ext -i
