--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,5 +1,6 @@
+# Adapted from https://github.com/pandas-dev/pandas/blob/master/azure-pipelines.yml
 jobs:
 - template: build_tools/azure/posix.yml
   parameters:
-    name: macOS
-    vmImage: xcode9-macos10.13
+    name: Linux
+    vmImage: ubuntu-16.04
