--- a/build_tools/azure/posix.yml
+++ b/build_tools/azure/posix.yml
@@ -8,7 +8,7 @@ jobs:
   pool:
     vmImage: ${{ parameters.vmImage }}
   variables:
-    WORLD: "Hello"
+    TEST_DIR: "/tmp/sklearn"
   strategy:
     matrix:
       ${{ if eq(parameters.name, 'Linux') }}:
@@ -22,9 +22,16 @@ jobs:
           JOBLIB_VERSION: "0.11"
 
   steps:
+    - task: UsePythonVersion@0
+      inputs:
+        versionSpec: '3.6'
+        architecture: 'x64'
     - script: |
         build_tools/azure/install.sh
       displayName: 'Install'
     - script: |
         build_tools/azure/test_script.sh
-      displayName: 'Test'
+      displayName: 'Test library'
+    - script: |
+        build_tools/azure/test_docs.sh
+      displayName: 'Test docs'
