--- a/build_tools/azure/posix.yml
+++ b/build_tools/azure/posix.yml
@@ -40,6 +40,6 @@ jobs:
     - script: |
         build_tools/azure/test_pytest_soft_dependency.sh
       displayName: 'Test soft dependency'
-      enabled: CHECK_PYTEST_SOFT_DEPENDENCY
+      enabled: $CHECK_PYTEST_SOFT_DEPENDENCY
 
 
