--- a/build_tools/azure/posix.yml
+++ b/build_tools/azure/posix.yml
@@ -11,6 +11,7 @@ jobs:
     TEST_DIR: "/tmp/sklearn"
     VIRTUALENV_DIR: "testvenv"
     CHECK_PYTEST_SOFT_DEPENDENCY: false
+    hello: false
   strategy:
     matrix:
       ${{ if eq(parameters.name, 'Linux') }}:
@@ -40,3 +41,4 @@ jobs:
     - script: |
         build_tools/azure/test_pytest_soft_dependency.sh
       displayName: 'Test soft dependency'
+      enabled: $(hello)
